# vbetool

./: .gitignore  Makefile.am  configure.ac  vbetool.c  vbetool.h  x86-common.c
